# MuiceBot

./: .deepsource.toml  .env.dev  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bot.py  migrations.py  package.json  pyproject.toml  requirements.txt  rspress.config.ts  setup.ps1
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: Bug Report.yaml  Model.yaml
.github/workflows/: pre-commit.yml  pypi-publish.yml  pytest.yml
Muice/: __init__.py  config.py  database.py  muice.py  onebot.py  utils.py
Muice/llm/: Azure.py  Dashscope.py  Llmtuner.py  Ollama.py  Openai.py  Rwkv.py  Transformers.py  Xfyun.py  _types.py
Muice/utils/: utils.py
docs/: _meta.json  index.md
docs/about/: Muice.md  Nonebot.md  _meta.json  index.md
docs/develop/: _meta.json  plugin.md  template.md
docs/guide/: QA.md  _meta.json  command.md  configuration.md  introduction.md  migrations.md  setup.md  setup.mdx
docs/model/: _meta.json  configuration.md  evaluate.md  info.md
muicebot/: __init__.py  _types.py  config.py  database.py  models.py  muice.py  onebot.py  scheduler.py
muicebot/agent/: __init__.py  chain.py  communication.py  config.py  conftest.py  core.py  manager.py  models.py  tools.py  utils.py
muicebot/builtin_plugins/: __init__.py  get_current_time.py  get_username.py  migrations.py  moe_chat.py
nonebot_plugin_muicebot/: __init__.py  config.py  database.py  message_handler.py  muice.py  onebot.py  scheduler.py  utils.py
templates/: ReasoningExpert.jinja2
tests/: conftest.py  models.py  utils.py
utils/: logger.py
(+87 files in other folders)
