[project]
name = "nonebot-plugin-muicebot"
version = "0.1.0"
description = "nonebot-plugin-muicebot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    {name = "Telegram", module_name = "nonebot.adapters.telegram"},
    {name = "QQ", module_name = "nonebot.adapters.qq"},
]
plugins = ["nonebot_plugin_muicebot", "nonebot_plugin_apscheduler"]
builtin_plugins = []
